--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,29 @@
+:root {
+  --from : 0deg;
+  --to : 360deg;
+  --bg : #282c34;
+  --anim : App-logo-spin  infinite 1s linear;
+}
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
+  pointer-events: none;
+  animation: var(--anim);
+  /* animation: gerak  infinite 0.25s linear; */
+  /* transform: scaleY(0.25) 2s; */
+}
+
+.App-logo-stop {
+  height: 20vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: var(--bg);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -30,9 +39,18 @@
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg);
+    transform: rotate(var(--from));
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(var(--to));
+  }
+}
+
+@keyframes gerak {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.2);
   }
 }
